# envi

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
example/: .env  .env.example  .env.production
example/src/: config.js
src/: app.rs  main.rs
src/env/: diff.rs  mod.rs  parser.rs  scanner.rs
src/ui/: details.rs  dialogs.rs  helpers.rs  layout.rs  mod.rs  profiles.rs  variables.rs
