[package]
name = "envi"
version = "0.1.1"
edition = "2021"
description = "A TUI for managing .env files — diff, scan, edit, encrypt"
license = "MIT"
repository = "https://github.com/yourusername/envi"
keywords = ["env", "dotenv", "tui", "terminal", "environment"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
